# rust-todo-mvc

./: Cargo.toml
sql/: 00-recriation-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: main.rs
src/_tests/: model_db.rs
src/model/: db.rs  mod.rs
