[package]
edition = "2021"
name = "api"
version = "0.1.0"

[dependencies]
futures = "0.3.21"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}

# JSON libs
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
# WEB libs
warp = "0.3.2"
# DB libs
sqlx = {version = "0.5.11", features = ["runtime-tokio-rustls", "postgres"]}
